--- a/static/main.css
+++ b/static/main.css
@@ -29,7 +29,7 @@ th, td {
     border: 1px solid;
 }
 
-body{background-color: rgb(255, 255, 255);padding-top: 70px; background-image: url("/static/back.png");
+body{background-color: rgb(255, 255, 255);padding-top: 70px; background-image: url("/static/back.gif");
 }
 
 .BREP {
