--- a/static/main.css
+++ b/static/main.css
@@ -34,7 +34,7 @@ body{background-color: rgb(255, 255, 255);padding-top: 70px;
 
 .BREP {
     border-radius: 25px; 
-    background: #2cb809; 
+    background: #29c003; 
     padding: 20px; 
     width: 200px; 
     height: 150px; 
