--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -10,18 +10,20 @@
   var rep_li = [];
   
   function ajout_rep(){
-    txt =document.getElementById('nrep').value;
+    txt =document.getElementById('nrep').value
+    console.log(txt);
+    document.getElementById("btnsubmit").removeAttribute("hidden");
 
 
     rep_li.push(txt);
     //console.log(rep_li)
     document.getElementById('li_rep_possibles').value=""+rep_li.join(";");
-    
+    //console.log(rep_li.join(";"));
     num = 0
     document.getElementById('rep_possibles').innerHTML ="";
     for(element in rep_li){
         document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
-        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element]+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
+        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element].replace(/\n/g, "<BR>")+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
         num=num+1;
     }
     document.getElementById('nb_rep_possibles').value=num;
@@ -32,7 +34,7 @@
     document.getElementById('rep_possibles').innerHTML ="";
     for(element in rep_li){
         document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
-        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element]+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
+        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element].replace(/\n/g, "<BR>")+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
         num=num+1;
     }
     document.getElementById('nb_rep_possibles').value=num;
@@ -77,18 +79,18 @@
     
     <div class="entree">
         <label for="nouvelle_rep">Entrer une reponse et cliquez sur ajouter : </label>
-        <input type="text" name="nrep" id="nrep">
-        <input type="text" name="li_rep_possibles" id="li_rep_possibles" hidden>
+        <textarea name="nrep" id="nrep"></textarea>
+        <textarea name="li_rep_possibles" id="li_rep_possibles" hidden></textarea>
         <input type="number" name="nb_rep_possibles" id="nb_rep_possibles" hidden>
         <input type="button" name="ajoutrep" id="ajoutrep" onclick="ajout_rep()" value="Ajouter !"> <BR>Cochez la/les reponses !
     </div>
     <div id = "rep_possibles">
     </div><br>
-    <input type="submit" name="btnsubmit" id="btnsubmit" value ="Ajouter la question !">
+    <input type="submit" name="btnsubmit" id="btnsubmit" value ="Ajouter la question !" hidden>
     <input type="button" name="visu" id="visu" value ="Visualiser l'enonce de la question !" onclick="visualisation_iframe()">
-    <iframe name="iframe_visu" src="" id="iframe_visu" width="500" height="500" style="position: fixed;
+    <iframe name="iframe_visu" src="" id="iframe_visu" width="750" height="600" style="position: fixed;
     top: 100px;
-    right: 50px;" hidden></iframe>
+    right: 150px;" hidden></iframe>
 </form><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
