--- a/static/main.css
+++ b/static/main.css
@@ -33,23 +33,11 @@ body{background-color: rgb(255, 255, 255);padding-top: 70px;
 }
 
 .BREP {
-    border-radius: 25px; 
-    background: #29c003; 
-    padding: 20px; 
-    width: 200px; 
-    height: 150px; 
-    margin: 10px;
-    display: inline-block;
+    border-radius: 25px; background: #29c003; padding: 6px; min-width: 10%; min-height: 25px; margin: 6px;display: inline-block;
 }
 
 .MREP {
-    border-radius: 25px; 
-    background: #d80b0b; 
-    padding: 20px; 
-    width: 200px; 
-    height: 150px; 
-    margin: 10px;
-    display: inline-block;
+    border-radius: 25px; background: #d80b0b; padding: 6px; min-width: 10%; min-height: 25px; margin: 6px;display: inline-block;
 }
 
 .nom {
