--- a/templates/modificationQuestion.html
+++ b/templates/modificationQuestion.html
@@ -48,8 +48,11 @@
     document.getElementById('nb_rep_possibles').value=num;
   }
   function supp_rep(n){
-      rep_li.splice(n,1);
-      num = 0;
+    //console.log(n)
+    //console.log(rep_li)
+    rep_li.splice(n,n);
+    num = 0;
+    document.getElementById('li_rep_possibles').value=""+rep_li.join(";");
     document.getElementById('rep_possibles').innerHTML ="";
     for(element in rep_li){
         document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
