modification des html et du css pour le style des pages

--- a/templates/Question.html
+++ b/templates/Question.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../static/main.css">
-  <title>Question</title>
+  <title>QuizTio</title>
   <script>
     function get_responses(){
     li_bonne_rep = document.getElementById("numero_load").innerHTML.split(",");
@@ -29,7 +29,7 @@
      </script>
 </head>
 <body>
-  <div class="nom">NomDuSite</div>
+  <div class="nom">QuizTio</div>
   <ul class="menu">
     <li>
       Invité
