--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="static/main.css">
   <script></script>
-  <title>Commande</title>
+  <title>QuizTio</title>
   <script></script>
 </head>
 <body>
-  <div class="nom">NomDuSite</div>
+  <div class="nom">QuizTio</div>
   <ul class="menu">
       <li>
           Invité
@@ -19,7 +19,7 @@
           </ul>
       </li>
   </ul>
-<div id="mid"><br>Bienvenue sur notre site<br>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div id="mid"><br><span>Bienvenue sur notre site !<br>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci.</span><br><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
