--- a/templates/creationFeuille.html
+++ b/templates/creationFeuille.html
@@ -17,7 +17,7 @@
 			}
 		   });
 		 </script>
-		<title>Commande</title>
+		<title>QuizTio</title>
 		<script>
 			function filtrage_par_eti(etiquette_filtre) {
 				//changer onclick button
@@ -129,7 +129,7 @@
 		</script>
 	</head>
 	<body onload="bouton_filtrage()">
-		<div class="nom">NomDuSite</div>
+		<div class="nom">QuizTio</div>
 		<ul class="menu">
 			<li>
 				Invité
