--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="static/main.css"><link rel="stylesheet" href="static/creationQuestion.css">
   <script></script>
-  <title>Commande</title>
+  <title>QuizTio</title>
   <script type="text/javascript">
   var rep_li = [];
   
@@ -74,7 +74,7 @@ function changerCouleurRep(ele){
   </script>
 </head>
 <body>
-    <div class="nom">NomDuSite</div>
+    <div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
             Invité
