--- a/templates/modificationQuestion.html
+++ b/templates/modificationQuestion.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../static/main.css">
   <script></script>
-  <title>Commande</title>
+  <title>QuizTio</title>
   <script type="text/javascript">
   var rep_li = [];
   function get_responses(){
@@ -64,7 +64,7 @@
   </script>
 </head>
 <body onload="chargement()">
-    <div class="nom">NomDuSite</div>
+    <div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
             Invité
