--- a/templates/non_connecte.html
+++ b/templates/non_connecte.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="static/main.css">
   <script></script>
-  <title>Commande</title>
+  <title>QuizTio</title>
   <script></script>
 </head>
 <body>
-  <div class="nom">NomDuSite</div>
+  <div class="nom">QuizTio</div>
   <ul class="menu">
       <li>
           Invité
@@ -19,7 +19,7 @@
           </ul>
       </li>
   </ul>
-<div id="mid"><br>Vous tentez d'acceder a une partie protégés du site. Afin d'y acceder vous pouvez gratuitement creer une compte <a href="register">ici</a>.<br></div>
+<div id="mid"><br><span>L'accès à cette partie du site nécessite d'être connecté. Afin d'y accéder, vous pouvez gratuitement créer une compte <a href="register">ici</a> ou vous connecter <a href="login">ici</a>.</span><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
