--- a/templates/visuIFrame.html
+++ b/templates/visuIFrame.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../static/main.css">
-  <title>Question</title>
+  <title>QuizTio</title>
   <script>
 
   </script>
@@ -22,7 +22,7 @@
      </script>
 </head>
 <body>
-  <div class="nom">NomDuSite</div>
+  <div class="nom">QuizTio</div>
 <div id="mid">
   <tr>
     <td class="eti">
