--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -10,11 +13,91 @@
     top: 0;
     width: 100%;
     text-align: center;
-    background-color: rgb(137, 226, 211);color : rgb(0, 0, 0);
+    background-color: rgb(137, 226, 211);
+    color : rgb(0, 0, 0);
 }
 
 #mid {
-    background-color: rgb(255, 255, 255);color : rgb(0, 0, 0);
+    background-color: #f7f7f7;
+    color : rgb(0, 0, 0);
+    font-family: 'Poppins', sans-serif;
+}
+
+#mid > span{
+    padding: 10px;
+    margin: 5px;
+}
+
+#mid > span a{
+    color: #ce1711;
+}
+
+.log_reg{
+    display: flex;
+    justify-content:center;
+    flex-direction: columns;
+    align-items: center;
+}
+
+.log_reg form{
+    margin-top: 20px;
+    padding: 40px 60px;
+    background-color: #dadada;
+    border-radius: 30px;
+    min-width: 300px;
+}
+
+.log_reg form h1{
+    color: #ce1711;
+    text-align: center;
+    margin-bottom: 30px;
+    font-family: 'Poppins', sans-serif;
+} 
+
+.log_reg form .erreurLog{
+    color: #ce1711; 
+    padding: 20px;
+    font-family: 'Poppins', sans-serif;
+} 
+
+.log_reg form .entree{
+    flex: flex;
+    flex-direction: column;
+}  
+
+.log_reg form .entree input[type='text'], input[type='password'], input[type='email']{
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    background-color: #f0f0f0;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    outline: none;
+} 
+
+.log_reg form > input::placeholder{
+    font-family: 'Poppins', sans-serif;
+}
+
+.log_reg form input[type='submit']{
+    padding: 15px 25px;
+    border-radius: 5px;
+    border:none;
+    font-size: 15px;
+    color: #fff;
+    background-color: #ce1711;
+    outline:none;
+    cursor:pointer;
+    margin-bottom: 20px;
+} 
+
+.log_reg form label{
+    font-family: 'Poppins', sans-serif;
+}
+
+.log_reg form label a{
+    font-family: 'Poppins', sans-serif;
+    color: #ce1711;
 }
 
 #bot {
@@ -29,15 +112,29 @@ th, td {
     border: 1px solid;
 }
 
-body{background-color: rgb(255, 255, 255);padding-top: 70px; 
+body{
+    background-color: #f7f7f7;
+    padding-top: 70px; 
 }
 
 .BREP {
-    border-radius: 25px; background: #29c003; padding: 6px; min-width: 10%; min-height: 25px; margin: 6px;display: inline-block;
+    border-radius: 25px; 
+    background: #29c003; 
+    padding: 6px; 
+    min-width: 10%; 
+    min-height: 25px; 
+    margin: 6px;
+    display: inline-block;
 }
 
 .MREP {
-    border-radius: 25px; background: #d80b0b; padding: 6px; min-width: 10%; min-height: 25px; margin: 6px;display: inline-block;
+    border-radius: 25px; 
+    background: #d80b0b; 
+    padding: 6px; 
+    min-width: 10%; 
+    min-height: 25px; 
+    margin: 6px;
+    display: inline-block;
 }
 
 .nom {
@@ -45,7 +142,7 @@ body{background-color: rgb(255, 255, 255);padding-top: 70px;
     top: 20px;
     left: 20px;
     width: 100%;
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Unbounded", cursive;
     font-size: 40px;
     letter-spacing: 0.4px;
     word-spacing: 0.6px;
@@ -61,28 +158,32 @@ body{background-color: rgb(255, 255, 255);padding-top: 70px;
     position: fixed;
     top: 20px;
     right: 20px;
-    width: 100px;
+    width: 130px;
     height: 40px;
 }
 .menu > li {
+    font-family: 'Poppins', sans-serif;
     float: left;
     color: #000000;
-    width: 140px;
+    width: 150px;
     height: 40px;
     line-height: 40px;
-    background: #afafaf;
+    background: #dadada;
     cursor: pointer;
-    font-size: 17px;
+    font-size: 20px;
+    padding-left: 5px;
 }
 .sousMenu {
     transform: scale(0);
 }
 .sousMenu li {
-    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 17px;
     background: #c7c7c7;
     padding: 8px 0;
     color: #000000;
     border-bottom: 1px solid #353535;
+    padding-left: 5px;
     transform: scale(0);
 }
 .sousMenu li:last-child {
