--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="static/main.css">
   <script></script>
-  <title>Commande</title>
+  <title>QuizTio</title>
   <script></script>
 </head>
 <body>
     
-    <div class="nom">NomDuSite</div>
+    <div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
             Invité
@@ -21,21 +21,23 @@
         </li>
     </ul>
 
-<div id="mid"><br>
-    {% if erreur == True: %}
-    <div style="color: darkred; padding: 20px;">Nom d'utilisateur ou mot de passe incorrect</div>
-    {%endif%}
+<div class="log_reg"><br>
     <form action = "" method = "post">
+        <h1>Se connecter</h1>
+        {% if erreur == True: %}
+        <div class="erreurLog">Nom d'utilisateur ou mot de passe incorrect</div>
+        {%endif%}
         <div class="entree">
-            <label for="idUser">Entrez votre nom d'utilisateur : </label>
+            <label for="idUser">Entrez votre nom d'utilisateur : </label><br>
             <input type="text" name="idUser" minlength="2" placeholder="Nom d'utilisateur" required>
         </div>
         <div class="entree">
-            <label for="name">Entrez votre mot de passe : </label>
+            <label for="name">Entrez votre mot de passe : </label><br>
             <input type="password" name="password" minlength="2" placeholder="Mot de passe" required>
         </div>
         <input type = "submit" value = "Valider" />
-
+        <br>
+        <label>Vous n'êtes pas membre ? Créez un compte <a href="register">ici</a>.</label>
     </form>
 </div>
 <div id="bot">
