modif couleur des etiquettes de bdd (illisible avant)

--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -25,7 +25,7 @@
 				
 				
 				document.getElementById(etiquette_filtre + "-bouton").style =
-					"background-color : blue";
+					"background-color : #c9504c";
 				document.getElementById(etiquette_filtre + "-bouton").activer =
 					"oui";
 				document
