--- a/static/main.css
+++ b/static/main.css
@@ -39,7 +39,13 @@
     border-radius: 15px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
+}
 
+#mid .visuQuestion{
+    margin-left: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-weight: 700;
 }
 
 #exercice #formulaire .entree label{
