--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -88,7 +88,7 @@ function changerCouleurRep(ele){
     <div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
-            Invité
+            {{Username}}
             <ul class="sousMenu">
                 <li><a href="/">Accueil</a></li>
                 <li><a href="BDD">Liste de vos questions</a></li>
