--- a/templates/Question.html
+++ b/templates/Question.html
@@ -32,7 +32,7 @@
   <div class="nom">QuizTio</div>
   <ul class="menu">
     <li>
-      Invité
+      {{Username}}
       <ul class="sousMenu">
         <li><a href="../">Accueil</a></li>
         <li><a href="../BDD">Liste de vos questions</a></li>
