--- a/templates/feuille.html
+++ b/templates/feuille.html
@@ -24,6 +24,18 @@
 		</script>
 	</head>
 	<body onload="print()">
+		<div class="nom">QuizTio</div>
+    <ul class="menu">
+        <li>
+            Invité
+            <ul class="sousMenu">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="BDD">Liste de vos questions</a></li>
+                <li><a href="creationQuestion">Créer une question</a></li>
+                <li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
+            </ul>
+        </li>
+    </ul>
 		<div id="mid">
 			<table class="tableau_css">
 				<thead>
