--- a/templates/modificationQuestion.html
+++ b/templates/modificationQuestion.html
@@ -42,7 +42,7 @@
     document.getElementById('rep_possibles').innerHTML ="";
     for(element in rep_li){
         document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
-        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element]+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
+        ' <span id = "rep_en_cours" style="border-radius: 25px; background: #d80b0b; padding: 6px; min-width: 10%; min-height: 25px; margin: 6px;display: inline-block;"> <input type="checkbox" id="'+num +'" name="'+num +'" onclick=changerCouleurRep(this)><span id="spanInte">'+rep_li[element].replace(/\n/g, "<BR>")+'</span><input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !" style="display: block; margin-left: auto; margin-right: 0;"> </span>';
         num=num+1;
     }
     document.getElementById('nb_rep_possibles').value=num;
@@ -56,7 +56,7 @@
     document.getElementById('rep_possibles').innerHTML ="";
     for(element in rep_li){
         document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
-        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element]+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
+        ' <span id = "rep_en_cours" style="border-radius: 25px; background: #d80b0b; padding: 6px; min-width: 10%; min-height: 25px; margin: 6px;display: inline-block;"> <input type="checkbox" id="'+num +'" name="'+num +'" onclick=changerCouleurRep(this)><span id="spanInte">'+rep_li[element].replace(/\n/g, "<BR>")+'</span><input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !" style="display: block; margin-left: auto; margin-right: 0;"> </span>';
         num=num+1;
     }
     document.getElementById('nb_rep_possibles').value=num;
