mise en commentaire du bottom

--- a/templates/Question.html
+++ b/templates/Question.html
@@ -58,7 +58,7 @@
         
   </tr>
 
-</div>
+</div><!--
 <div id="bot">
 <a href="../">Acceuil</a>
 <a href="../register">S'enregistrer</a>
@@ -66,7 +66,7 @@
 <a href="../creationQuestion">Créer une question</a>
 <a href="../BDD">Liste de vos questions</a>
 <a href="../creationFeuille">Créer une feuille d'exercices</a>
-</div>
+</div>-->
 </body>
 
 </html>
