--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -129,6 +129,7 @@ function changerCouleurRep(ele){
     top: 100px;
     right: 150px;"hidden>
 </form><br><br></div>
+<!--
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="./register">S'enregistrer</a>
@@ -136,7 +137,7 @@ function changerCouleurRep(ele){
 <a href="./creationQuestion">Creer une question</a>
 <a href="./BDD">Liste de vos questions</a>
 <a href="./creationFeuille">Creer une feuille d'exercice</a>
-</div>
+</div>-->
 </body>
 
 </html>
