--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -181,7 +181,7 @@
 					</tr>
 				{% endfor %}
 			</table>
-		</div>
+		</div><!--
 		<div id="bot">
 			<a href="./">Acceuil</a>
 			<a href="register">S'enregistrer</a>
@@ -189,6 +189,6 @@
 			<a href="creationQuestion">Creer une question</a>
 			<a href="BDD">Liste de vos questions</a>
 			<a href="creationFeuille">Creer une feuille d'exercice</a>
-		</div>
+		</div>-->
 	</body>
 </html>
