--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -20,6 +20,7 @@
       </li>
   </ul>
 <div id="mid"><br><span>Bienvenue sur notre site !<br>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci.</span><br><br><br></div>
+<!--
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
@@ -27,7 +28,7 @@
 <a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
 <a href="creationFeuille">Créer une feuille d'exercices</a>
-</div>
+</div>-->
 </body>
 
 </html>
