--- a/templates/acceuil_connecte.html
+++ b/templates/acceuil_connecte.html
@@ -21,6 +21,7 @@
     </li>
   </ul>
 <div id="mid"><br><span>Bienvenue {{Username}} ! Vous pouvez dès à présent créer vos questions et faire vos propres feuilles d'exercices !</span><br></div>
+<!--
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
@@ -28,7 +29,7 @@
 <a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
 <a href="creationFeuille">Créer une feuille d'exercices</a>
-</div>
+</div>-->
 </body>
 
 </html>
