--- a/templates/non_connecte.html
+++ b/templates/non_connecte.html
@@ -20,6 +20,7 @@
       </li>
   </ul>
 <div id="mid"><br><span>L'accès à cette partie du site nécessite d'être connecté. Afin d'y accéder, vous pouvez gratuitement créer une compte <a href="register">ici</a> ou vous connecter <a href="login">ici</a>.</span><br></div>
+<!--
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
@@ -27,7 +28,7 @@
 <a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
 <a href="creationFeuille">Créer une feuille d'exercices</a>
-</div>
+</div>-->
 </body>
 
 </html>
