--- a/templates/register.html
+++ b/templates/register.html
@@ -39,7 +39,7 @@
             <label>Déjà membre ? Connectez vous <a href="login">ici</a>.</label>
         </form>
     </div>
-</div>
+</div><!--
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
@@ -47,7 +47,7 @@
 <a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
 <a href="creationFeuille">Créer une feuille d'exercices</a>
-</div>
+</div>-->
 </body>
 
 </html>
