ajout bouton déconnexion

--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -19,7 +19,8 @@
           </ul>
       </li>
   </ul>
-<div id="mid"><br><span>Bienvenue sur notre site !<br>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci.</span><br><br><br></div>
+<div id="mid"><br><span>Bienvenue sur notre site !</span><br>
+  <span>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci.</span><br><br><br></div>
 <!--
 <div id="bot">
 <a href="./">Acceuil</a>
