--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -152,6 +152,7 @@
 					<li><a href="BDD">Liste de vos questions</a></li>
 					<li><a href="creationQuestion">Créer une question</a></li>
 					<li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
+					<li><a href="deco">Se déconnecter</a></li>
 				</ul>
 			</li>
 		</ul>
