mini modif redirection deconnexion

--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -20,7 +20,8 @@
       </li>
   </ul>
 <div id="mid"><br><span>Bienvenue sur notre site !</span><br>
-  <span>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci.</span><br><br><br></div>
+  <span>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci.</span><br>
+  <span>vous pouvez gratuitement créer une compte <a href="register">ici</a> ou vous connecter <a href="login">ici</a>.</span></span><br><br></div>
 <!--
 <div id="bot">
 <a href="./">Acceuil</a>
