--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -121,8 +121,8 @@ function changerCouleurRep(ele){
     </div>
     <div id = "rep_possibles">
     </div><br>
-    <input type="submit" name="btnsubmit" id="btnsubmit" value ="Ajouter la question !" hidden>
-    <input type="button" name="visu" id="visu" value ="Visualiser l'enonce de la question !" onclick="visualisation_iframe()" hidden>
+    <input type="submit" name="btnsubmit" id="btnsubmit" value ="Ajouter la question !" >
+    <input type="button" name="visu" id="visu" value ="Visualiser l'enonce de la question !" onclick="visualisation_iframe()" >
 
     <iframe name="iframe_visu" src="" id="iframe_visu" width="750" height="600" style="position: fixed;
     top: 100px;
