--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="static/main.css">
+  <link rel="stylesheet" href="static/log-reg.css" />
   <script></script>
   <title>QuizTio</title>
   <script></script>
