--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="static/main.css">
-  <link rel="stylesheet" href="static/log-reg.css">
+  <link rel="stylesheet" href="../static/main.css">
+  <link rel="stylesheet" href="../static/log-reg.css">
   <script></script>
   <title>QuizTio</title>
   <script></script>
@@ -14,21 +14,18 @@
     <ul class="menu">
         <li>
             Invité
-            <ul class="sousMenu">
-                <li><a href="/">Accueil</a></li>
-                <li><a href="login">Se connecter</a></li>
-                <li><a href="register">S'enregistrer</a></li>
+            <ul class="sousMenu">Id questiona></li>
             </ul>
         </li>
     </ul>
 
 <div class="log_reg"><br>
     <form action = "" method = "post">
-        <h1>Id question</h1>
+        <h1>Questionnaire</h1>
         <div class="entree">
-            <label for="idquest">Entrez votre nom d'utilisateur : </label><br>
+            <label for="idquest">entrez un id de question ou questionnaire: </label><br>
             <input type="text" name="idquest" minlength="8" maxlength="8" placeholder="id question" required><br>
-            <input type="submit" placeholder="ok"/>
+            <input type="submit" value="ok"/>
         </div>
     </form>
 </div>
