--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../static/main.css">
-  <link rel="stylesheet" href="../static/log-reg.css">
+  <link rel="stylesheet" href="static/main.css">
+  <link rel="stylesheet" href="static/log-reg.css">
   <script></script>
   <title>QuizTio</title>
   <script></script>
