--- a/templates/login.html
+++ b/templates/login.html
@@ -38,8 +38,8 @@
         </div>
         <div class="entree">
             <label>Professeur </label>
-            <input type="checkbox" id="boiteetu" />
-			<label for="boiteetu" aria-describedby="label"><span class="boite"></span></label>
+            <input type="checkbox" id="typecompte" name="typecompte"/>
+			<label for="typecompte" aria-describedby="label"><span class="boite"></span></label>
             <label>Eleve</label>
         </div><br>
         <input type = "submit" value = "Valider" />
